--- a/public/services/index.html
+++ b/public/services/index.html
@@ -669,13 +669,23 @@
 <div class="universal-wrapper">
   
   <div class="article-style"><h2 id="services">Services</h2>
+<h3 id="panelist">Panelist</h3>
+<ul>
+<li>NSF 2023, 2024</li>
+<li>DOE 2024</li>
+</ul>
 <h3 id="editorial-board---journals">Editorial Board - Journals</h3>
 <ul>
-<li>Associate Editor, Neurocomputing (Elsevier) (IF=5.719), from 12/2022 - Present</li>
+<li>Associate Editor, Neural Networks (IF=6.0), from 01/2025 - Present</li>
+<li>Associate Editor, Pattern Recognition (IF=7.5), from 04/2024 - Present</li>
+<li>Associate Editor, Neurocomputing (IF=5.719), from 12/2022 - 04/2024</li>
 </ul>
 <h3 id="referee-journals">Referee-Journals</h3>
 <ul>
+<li>Nature Communication</li>
+<li>Nature Communication Physics</li>
 <li>Journal of Machine Learning Research</li>
+<li>Transactions on Machine Learning Research</li>
 <li>IEEE Transactions on Pattern Analysis and Machine Intelligence</li>
 <li>IEEE Transactions on Knowledge and Data Engineering</li>
 <li>IEEE Transactions on Neural Networks and Learning System</li>
@@ -700,27 +710,66 @@
 <li>Journal of Visual Communication and Image Representation</li>
 </ul>
 <h3 id="referee-conferences">Referee-Conferences</h3>
-<h4 id="organizersprogram-co-chairs">Organizers/Program (Co-)Chairs</h4>
+<h4 id="organization-committeeprogram-co-chairs">Organization Committee/Program (Co-)Chairs</h4>
 <ul>
-<li>SDM 2024 Workshop: The 5th AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/sdm2024" target="_blank" rel="noopener">Link</a></li>
-<li>AAAI 2024 Workshop: The 4th AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/aaai2024" target="_blank" rel="noopener">Link</a></li>
-<li>ICDM 2023 Workshop: The 3rd AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/icdm2023" target="_blank" rel="noopener">Link</a></li>
-<li>KDD 2023 Workshop: 9th International Workshop on Mining and Learning from Time Series 
-<a href="https://kdd-milets.github.io/milets2023/" target="_blank" rel="noopener">Link</a></li>
-<li>IJCAI 2023 Workshop: The 2nd AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/ijcai2023" target="_blank" rel="noopener">Link</a></li>
-<li>KDD 2022 Workshop: 8th International Workshop on Mining and Learning from Time Series 
-<a href="https://kdd-milets.github.io/milets2022/" target="_blank" rel="noopener">Link</a></li>
-<li>IJCAI 2022 Workshop: The 1st AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/" target="_blank" rel="noopener">Link</a></li>
-<li>WSDM 2022 Workshop: Federated Learning for Private Web Search and Data Mining (FL4P-WSDM) 
-<a href="https://fl4p-wsdm.github.io/" target="_blank" rel="noopener">Link</a></li>
+<li>
+<p>Social Media Co-Chair of ICDM 2025</p>
+</li>
+<li>
+<p>LLM Track Co-Chair of PAKDD 2025</p>
+</li>
+<li>
+<p>Registration Co-Chair of IEEE Big Data 2024</p>
+</li>
+<li>
+<p>AAAI 2025 Workshop: AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/aaai2025" target="_blank" rel="noopener">Link</a></p>
+</li>
+<li>
+<p>KDD 2024 Workshop: 10th International Workshop on Mining and Learning from Time Series 
+<a href="https://kdd-milets.github.io/milets2024/" target="_blank" rel="noopener">Link</a></p>
+</li>
+<li>
+<p>IJCAI 2024 Workshop: AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/ijcai2024" target="_blank" rel="noopener">Link</a></p>
+</li>
+<li>
+<p>SDM 2024 Workshop: The 5th AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/sdm2024" target="_blank" rel="noopener">Link</a></p>
+</li>
+<li>
+<p>AAAI 2024 Workshop: The 4th AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/aaai2024" target="_blank" rel="noopener">Link</a></p>
+</li>
+<li>
+<p>ICDM 2023 Workshop: The 3rd AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/icdm2023" target="_blank" rel="noopener">Link</a></p>
+</li>
+<li>
+<p>KDD 2023 Workshop: 9th International Workshop on Mining and Learning from Time Series 
+<a href="https://kdd-milets.github.io/milets2023/" target="_blank" rel="noopener">Link</a></p>
+</li>
+<li>
+<p>IJCAI 2023 Workshop: The 2nd AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/ijcai2023" target="_blank" rel="noopener">Link</a></p>
+</li>
+<li>
+<p>KDD 2022 Workshop: 8th International Workshop on Mining and Learning from Time Series 
+<a href="https://kdd-milets.github.io/milets2022/" target="_blank" rel="noopener">Link</a></p>
+</li>
+<li>
+<p>IJCAI 2022 Workshop: The 1st AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/" target="_blank" rel="noopener">Link</a></p>
+</li>
+<li>
+<p>WSDM 2022 Workshop: Federated Learning for Private Web Search and Data Mining (FL4P-WSDM) 
+<a href="https://fl4p-wsdm.github.io/" target="_blank" rel="noopener">Link</a></p>
+</li>
 </ul>
 <h4 id="session-chairs">Session Chairs</h4>
 <ul>
+<li>IJCAI 2024: Anomaly/Outlier Detection</li>
+<li>SDM 2024: Reinforcement Learning and Representation Learning</li>
 <li>KDD 2023: Causal Structure Learning</li>
 <li>AAAI 2023: Time Series/Data Streams</li>
 <li>AAAI 2023: Mining of Spatial, Temporal or Spatio-temporal Data</li>
@@ -733,21 +782,23 @@
 <li>AAAI 2019: Transfer/Adaptation/Multitask Learning</li>
 <li>AAAI 2019: Vision and Video Analysis</li>
 </ul>
-<h4 id="senior-program-committee-members">Senior Program Committee Members</h4>
+<h4 id="area-chairssenior-program-committee-members">Area Chairs/Senior Program Committee Members</h4>
 <ul>
-<li>AAAI Conference on Artificial Intelligence (AAAI) 2019, 2021 - 2024</li>
-<li>International Joint Conference on Artificial Intelligence (IJCAI) 2021, 2023-2024</li>
-<li>ACM International Conference on Information and Knowledge Management (CIKM) 2019 (Applied Research Track)</li>
+<li>International Joint Conference on Artificial Intelligence (IJCAI) 2025 (Area Chair)</li>
+<li>IEEE International Conference on Data Mining (ICDM) (Area Chair)</li>
+<li>AAAI Conference on Artificial Intelligence (AAAI) 2019, 2021 - 2025 (SPC)</li>
+<li>International Joint Conference on Artificial Intelligence (IJCAI) 2021, 2023-2024 (SPC)</li>
+<li>ACM International Conference on Information and Knowledge Management (CIKM) 2019 (Applied Research Track) (SPC)</li>
 </ul>
 <h4 id="program-committee-members">Program Committee Members</h4>
 <ul>
-<li>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD) 2019 - 2024</li>
+<li>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD) 2019 - 2025</li>
 <li>AAAI Conference on Artificial Intelligence (AAAI) 2017 - 2020</li>
 <li>International Joint Conference on Artificial Intelligence (IJCAI) 2015, 2017-2020, 2022</li>
-<li>International Joint Conference on Artificial Intelligence (IJCAI) - Survey Track 2019-2024</li>
+<li>International Joint Conference on Artificial Intelligence (IJCAI) - Survey Track 2019-2025</li>
 <li>ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR) 2020</li>
-<li>IEEE International Conference on Data Mining (ICDM) 2017 - 2023</li>
-<li>SIAM International Conference on Data Mining (SDM) 2017 - 2024</li>
+<li>IEEE International Conference on Data Mining (ICDM) 2017 - 2024</li>
+<li>SIAM International Conference on Data Mining (SDM) 2017 - 2025</li>
 <li>ACM International WSDM Conference (WSDM) 2020, 2021, 2023</li>
 <li>Conference on Empirical Methods in Natural Language Processing (EMNLP) 2021, 2023</li>
 <li>The European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD) 2020</li>
@@ -763,9 +814,9 @@
 </ul>
 <h4 id="reviewers">Reviewers</h4>
 <ul>
-<li>International Conference on Machine Learning (ICML) 2021-2024</li>
-<li>Neural Information Processing Systems (NeurIPS) 2020-2023</li>
-<li>International Conference on Learning Representations (ICLR) 2021-2024</li>
+<li>International Conference on Machine Learning (ICML) 2021-2025</li>
+<li>Neural Information Processing Systems (NeurIPS) 2020-2024</li>
+<li>International Conference on Learning Representations (ICLR) 2021-2025</li>
 <li>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2019-2024</li>
 <li>IEEE International Conference on Computer Vision (ICCV) 2019</li>
 <li>Europe Conference on Computer Vision (ECCV) 2020, 2022, 2024</li>
