--- a/team/index.html
+++ b/team/index.html
@@ -734,8 +734,7 @@
 </ul>
 <p><strong><span style="color:#DE3163">Former Members</span></strong></p>
 <ul>
-<li>
-<p><strong>Xikun Zhang</strong> (Co-advisor), Ph.D. student, June 2020 - Spring 2024</p>
+<li><strong>Xikun Zhang</strong> (Co-advisor), Ph.D. student, June 2020 - Summer 2024
 <ul>
 <li>BS from USTC and MS from University of Sydney</li>
 <li><strong>IEEE T-PAMI</strong> x 1, <strong>IEEE T-NNLS</strong> x 1, <strong>NeurIPS</strong> x 1, <strong>KDD</strong> x 1, <strong>ICDM</strong> x 1</li>
@@ -743,30 +742,26 @@
 <li>Employment: Nanyang Technological University, Presidential Postdoc</li>
 </ul>
 </li>
-<li>
-<p><strong>Chang Li</strong>, 2018 - 2021, Co-advisor</p>
+<li><strong>Chang Li</strong>, 2018 - 2021, Co-advisor
 <ul>
 <li>Ph.D. Student, University of Sydney</li>
 <li><strong>KDD</strong> x 1, <strong>ICLR</strong> x 1</li>
 <li>Employment: JD Explore Academy, Research Scientist</li>
 </ul>
 </li>
-<li>
-<p><strong>Wei Zhu</strong>, May 2020 - Aug 2020, Intern at NEC Labs America</p>
+<li><strong>Wei Zhu</strong>, May 2020 - Aug 2020, Intern at NEC Labs America
 <ul>
 <li>Ph.D student, University of Rochester</li>
 </ul>
 </li>
-<li>
-<p><strong>Dixian Zhu</strong>, May 2019 - Aug 2019, Intern at NEC Labs America</p>
+<li><strong>Dixian Zhu</strong>, May 2019 - Aug 2019, Intern at NEC Labs America
 <ul>
 <li>Ph.D Student, University of Iowa</li>
 <li><strong>AAAI</strong> x 1</li>
 </ul>
 </li>
 <li>
-<p>
-<a href="https://chuxuzhang.github.io/" target="_blank" rel="noopener"><strong>Chuxu Zhang</strong></a>, May 2018 - Aug 2018, Intern at NEC Labs America</p>
+<a href="https://chuxuzhang.github.io/" target="_blank" rel="noopener"><strong>Chuxu Zhang</strong></a>, May 2018 - Aug 2018, Intern at NEC Labs America
 <ul>
 <li>Ph.D Student, University of Notre Dame</li>
 <li><strong>AAAI</strong> x 1, <strong>KDD</strong> x 1, Patent App x1</li>
@@ -775,8 +770,7 @@
 </ul>
 </li>
 <li>
-<p>
-<a href="http://www.columbia.edu/~xf2143/" target="_blank" rel="noopener"><strong>Xinyang Feng</strong></a>, May 2018 - Aug 2018, Intern at NEC Labs America</p>
+<a href="http://www.columbia.edu/~xf2143/" target="_blank" rel="noopener"><strong>Xinyang Feng</strong></a>, May 2018 - Aug 2018, Intern at NEC Labs America
 <ul>
 <li>Ph.D student, Columbia University</li>
 <li><strong>ACM MM</strong> x 1, <strong>AAAI</strong> x 1, Patent App x 1</li>
@@ -785,8 +779,7 @@
 </ul>
 </li>
 <li>
-<p>
-<a href="https://www.linkedin.com/in/yuanpu-x-712a6353/" target="_blank" rel="noopener"><strong>Yuanpu Xie</strong></a>, May 2017 - Aug 2017, Intern at NEC Labs America</p>
+<a href="https://www.linkedin.com/in/yuanpu-x-712a6353/" target="_blank" rel="noopener"><strong>Yuanpu Xie</strong></a>, May 2017 - Aug 2017, Intern at NEC Labs America
 <ul>
 <li>Ph.D student, University of Florida</li>
 <li>Employment: 
@@ -794,8 +787,7 @@
 </ul>
 </li>
 <li>
-<p>
-<a href="http://cseweb.ucsd.edu/~yaq007/" target="_blank" rel="noopener"><strong>Yao Qin</strong></a>, June 2016 - Sep 2016, Intern at NEC Labs America</p>
+<a href="http://cseweb.ucsd.edu/~yaq007/" target="_blank" rel="noopener"><strong>Yao Qin</strong></a>, June 2016 - Sep 2016, Intern at NEC Labs America
 <ul>
 <li>Ph.D student, University of California San Diego</li>
 <li><strong>IJCAI</strong> x 1, Patent x 1, Patent App x 1</li>
@@ -803,80 +795,67 @@
 <a href="https://research.google/teams/brain/" target="_blank" rel="noopener">Google Brain</a>, Research Scientist</li>
 </ul>
 </li>
-<li>
-<p><strong>Susmita Ojha</strong>, Fall 2022 - Spring 2023</p>
+<li><strong>Susmita Ojha</strong>, Fall 2022 - Spring 2023
 <ul>
 <li>Master Student, University of Connecticut</li>
 </ul>
 </li>
-<li>
-<p><strong>Sebastiano Alderucci</strong>, Fall 2022 - Spring 2023</p>
+<li><strong>Sebastiano Alderucci</strong>, Fall 2022 - Spring 2023
 <ul>
 <li>Master Student, University of Connecticut</li>
 </ul>
 </li>
-<li>
-<p><strong>Madani Mohammad</strong>, Fall 2022 - Fall 2023</p>
+<li><strong>Madani Mohammad</strong>, Fall 2022 - Fall 2023
 <ul>
 <li>Master Student, University of Connecticut</li>
 </ul>
 </li>
-<li>
-<p><strong>Okem Chime</strong>, Summer 2023 - Fall 2023</p>
+<li><strong>Okem Chime</strong>, Summer 2023 - Fall 2023
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
 </ul>
 </li>
-<li>
-<p><strong>Rahul Bhagwani</strong>, Spring 2022 - Spring 2023</p>
+<li><strong>Rahul Bhagwani</strong>, Spring 2022 - Spring 2023
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
 </ul>
 </li>
-<li>
-<p><strong>Varsha Rathore</strong>, Fall 2020 - Spring 2021</p>
+<li><strong>Varsha Rathore</strong>, Fall 2020 - Spring 2021
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
 </ul>
 </li>
-<li>
-<p><strong>Dylan Manchester</strong>, Spring 2021</p>
+<li><strong>Dylan Manchester</strong>, Spring 2021
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
 </ul>
 </li>
-<li>
-<p><strong>Eric Wang</strong>, Spring 2021, Honors Thesis</p>
+<li><strong>Eric Wang</strong>, Spring 2021, Honors Thesis
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
 </ul>
 </li>
-<li>
-<p><strong>Arnav Kumar</strong>, Summer 2023 - Fall 2023</p>
+<li><strong>Arnav Kumar</strong>, Summer 2023 - Fall 2023
 <ul>
 <li>South Windsor High School</li>
 </ul>
 </li>
-<li>
-<p><strong>Spencer Danese</strong>, Summer 2023 - Fall 2023</p>
+<li><strong>Spencer Danese</strong>, Summer 2023 - Fall 2023
 <ul>
 <li>Glastonbury High School</li>
 </ul>
 </li>
-<li>
-<p><strong>Jay Tummala</strong>, Summer 2023 - Fall 2023</p>
+<li><strong>Jay Tummala</strong>, Summer 2023 - Fall 2023
 <ul>
 <li>Glastonbury High School</li>
 </ul>
 </li>
-<li>
-<p><strong>Jason Zhou</strong>, Fall 2021 - Spring 2022,</p>
+<li><strong>Jason Zhou</strong>, Fall 2021 - Spring 2022,
 <ul>
 <li>Glastonbury High School -&gt; B.S. student of CS @ University of Michigan</li>
 </ul>
 </li>
-<li>
-<p><strong>Hangyue Li</strong>, Summer 2021 - Spring 2022, Remote Intern</p>
+<li><strong>Hangyue Li</strong>, Summer 2021 - Spring 2022, Remote Intern
 <ul>
 <li>UESTC -&gt; CS Ph.D. student of CS @ Washington University in St. Louis</li>
 </ul>
