--- a/public/research/index.html
+++ b/public/research/index.html
@@ -700,7 +700,7 @@
 <td>PI</td>
 <td>Morgan Stanley</td>
 <td>Gift Fund</td>
-<td>2023.9 - 2024.8</td>
+<td>2025.1 - 2025.12</td>
 <td></td>
 <td></td>
 </tr>
@@ -745,6 +745,13 @@
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>PI</td>
+<td>Morgan Stanley</td>
+<td>Gift Fund</td>
+<td>2023.9 - 2024.12</td>
+<td></td>
+</tr>
 <tr>
 <td>PI</td>
 <td>NEC Labs America</td>
