--- a/public/services/index.html
+++ b/public/services/index.html
@@ -712,59 +712,31 @@
 <h3 id="referee-conferences">Referee-Conferences</h3>
 <h4 id="organization-committeeprogram-co-chairs">Organization Committee/Program (Co-)Chairs</h4>
 <ul>
-<li>
-<p>Social Media Co-Chair of ICDM 2025</p>
-</li>
-<li>
-<p>LLM Track Co-Chair of PAKDD 2025</p>
-</li>
-<li>
-<p>Registration Co-Chair of IEEE Big Data 2024</p>
-</li>
-<li>
-<p>AAAI 2025 Workshop: AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/aaai2025" target="_blank" rel="noopener">Link</a></p>
-</li>
-<li>
-<p>KDD 2024 Workshop: 10th International Workshop on Mining and Learning from Time Series 
-<a href="https://kdd-milets.github.io/milets2024/" target="_blank" rel="noopener">Link</a></p>
-</li>
-<li>
-<p>IJCAI 2024 Workshop: AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/ijcai2024" target="_blank" rel="noopener">Link</a></p>
-</li>
-<li>
-<p>SDM 2024 Workshop: The 5th AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/sdm2024" target="_blank" rel="noopener">Link</a></p>
-</li>
-<li>
-<p>AAAI 2024 Workshop: The 4th AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/aaai2024" target="_blank" rel="noopener">Link</a></p>
-</li>
-<li>
-<p>ICDM 2023 Workshop: The 3rd AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/icdm2023" target="_blank" rel="noopener">Link</a></p>
-</li>
-<li>
-<p>KDD 2023 Workshop: 9th International Workshop on Mining and Learning from Time Series 
-<a href="https://kdd-milets.github.io/milets2023/" target="_blank" rel="noopener">Link</a></p>
-</li>
-<li>
-<p>IJCAI 2023 Workshop: The 2nd AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/ijcai2023" target="_blank" rel="noopener">Link</a></p>
-</li>
-<li>
-<p>KDD 2022 Workshop: 8th International Workshop on Mining and Learning from Time Series 
-<a href="https://kdd-milets.github.io/milets2022/" target="_blank" rel="noopener">Link</a></p>
-</li>
-<li>
-<p>IJCAI 2022 Workshop: The 1st AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
-<a href="https://ai4ts.github.io/" target="_blank" rel="noopener">Link</a></p>
-</li>
-<li>
-<p>WSDM 2022 Workshop: Federated Learning for Private Web Search and Data Mining (FL4P-WSDM) 
-<a href="https://fl4p-wsdm.github.io/" target="_blank" rel="noopener">Link</a></p>
-</li>
+<li>Social Media Co-Chair of ICDM 2025</li>
+<li>LLM Track Co-Chair of PAKDD 2025</li>
+<li>Registration Co-Chair of IEEE Big Data 2024</li>
+<li>AAAI 2025 Workshop: AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/aaai2025" target="_blank" rel="noopener">Link</a></li>
+<li>KDD 2024 Workshop: 10th International Workshop on Mining and Learning from Time Series 
+<a href="https://kdd-milets.github.io/milets2024/" target="_blank" rel="noopener">Link</a></li>
+<li>IJCAI 2024 Workshop: AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/ijcai2024" target="_blank" rel="noopener">Link</a></li>
+<li>SDM 2024 Workshop: The 5th AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/sdm2024" target="_blank" rel="noopener">Link</a></li>
+<li>AAAI 2024 Workshop: The 4th AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/aaai2024" target="_blank" rel="noopener">Link</a></li>
+<li>ICDM 2023 Workshop: The 3rd AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/icdm2023" target="_blank" rel="noopener">Link</a></li>
+<li>KDD 2023 Workshop: 9th International Workshop on Mining and Learning from Time Series 
+<a href="https://kdd-milets.github.io/milets2023/" target="_blank" rel="noopener">Link</a></li>
+<li>IJCAI 2023 Workshop: The 2nd AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/ijcai2023" target="_blank" rel="noopener">Link</a></li>
+<li>KDD 2022 Workshop: 8th International Workshop on Mining and Learning from Time Series 
+<a href="https://kdd-milets.github.io/milets2022/" target="_blank" rel="noopener">Link</a></li>
+<li>IJCAI 2022 Workshop: The 1st AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/" target="_blank" rel="noopener">Link</a></li>
+<li>WSDM 2022 Workshop: Federated Learning for Private Web Search and Data Mining (FL4P-WSDM) 
+<a href="https://fl4p-wsdm.github.io/" target="_blank" rel="noopener">Link</a></li>
 </ul>
 <h4 id="session-chairs">Session Chairs</h4>
 <ul>
