--- a/public/services/index.html
+++ b/public/services/index.html
@@ -712,9 +712,9 @@
 <h3 id="referee-conferences">Referee-Conferences</h3>
 <h4 id="organization-committeeprogram-co-chairs">Organization Committee/Program (Co-)Chairs</h4>
 <ul>
-<li>Social Media Co-Chair of ICDM 2025</li>
-<li>LLM Track Co-Chair of PAKDD 2025</li>
-<li>Registration Co-Chair of IEEE Big Data 2024</li>
+<li>Social Media Co-Chair, ICDM 2025</li>
+<li>LLM Track Co-Chair, PAKDD 2025</li>
+<li>Registration Co-Chair, IEEE Big Data 2024</li>
 <li>AAAI 2025 Workshop: AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
 <a href="https://ai4ts.github.io/aaai2025" target="_blank" rel="noopener">Link</a></li>
 <li>KDD 2024 Workshop: 10th International Workshop on Mining and Learning from Time Series 
