--- a/team/index.html
+++ b/team/index.html
@@ -678,18 +678,21 @@
 <li><strong>Kanghui Ning</strong>, Ph.D. student, Fall 2024 -
 <ul>
 <li>BE from UESTC and MS from Huazhong University of Science and Technology (HUST)</li>
+<li><strong>UConn CSE Graduate Fellowship</strong>, 2024</li>
 </ul>
 </li>
 <li><strong>Xuyang Shen</strong>, Ph.D. student, Spring 2024 -
 <ul>
 <li>BE from UESTC and MS from University of California San Diego (UCSD)</li>
+<li><strong>Eversource Fellowship</strong> 2024</li>
 </ul>
 </li>
 <li><strong>Zijie Pan</strong>, Ph.D. student, Fall 2022 -
 <ul>
-<li>BS and MS from University of Virginia</li>
-<li><strong>GE Fellowship</strong> for Excellence 2023</li>
+<li>BS and MS from University of Virginia (UVA)</li>
 <li><strong>ICML</strong> x 1, <strong>IJCAI</strong> x 1</li>
+<li><strong>UConn CSE Predoctoral Fellowship</strong> 2024</li>
+<li><strong>GE Fellowship</strong> for Excellence 2023</li>
 <li><strong>UConn CSE Predoctoral Fellowship</strong> (Honorable Mention), 2023</li>
 <li>Tutorials at <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
 </ul>
@@ -697,21 +700,23 @@
 <li>
 <a href="https://sites.google.com/view/jayjiang/home" target="_blank" rel="noopener"><strong>Yushan Jiang</strong></a>, Ph.D. student, Spring 2022 -
 <ul>
-<li>BS from CAUC and MS from ERAU</li>
+<li>BS from CAUC and MS from Embry-Riddle Aeronautical University (ERAU)</li>
+<li><strong>KDD</strong> x 1, <strong>IJCAI</strong> x 1, <strong>CISS</strong> x 1</li>
+<li>Tutorials at <strong>KDD</strong> 2024, <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
+<li><strong>UConn CSE Anthony W. DeSio Endowed Fellowship</strong> 2024</li>
 <li><strong>GE Fellowship</strong> for Excellence 2023</li>
 <li><strong>UConn CSE Predoctoral Fellowship</strong> (Outstanding Scholarly and Research Accomplishments), 2023</li>
 <li><strong>GE Fellowship</strong> for Next Gen Scholar, 2022</li>
-<li><strong>KDD</strong> x 1, <strong>IJCAI</strong> x 1, <strong>CISS</strong> x 1</li>
-<li>Tutorials at <strong>KDD</strong> 2024, <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
 </ul>
 </li>
 <li><strong>Qianying Ren</strong>, Ph.D. student, Fall 2021 -
 <ul>
 <li>BS from Huazhong Agricultural University</li>
-<li>Cigna Fellowship, 2021</li>
 <li><strong>ICDM</strong> x 1,</li>
-<li><strong>GE Fellowship</strong>, 2022</li>
+<li><strong>UConn CSE Predoctoral Honorable Mention</strong>, 2024</li>
 <li><strong>GE Fellowship</strong> for Excellence, 2023</li>
+<li><strong>GE Fellowship</strong>, 2022</li>
+<li><strong>Cigna Fellowship</strong>, 2021</li>
 </ul>
 </li>
 <li><strong>Yamila Garcia</strong>, Master student, Spring 2024 -</li>
@@ -734,15 +739,16 @@
 </ul>
 <p><strong><span style="color:#DE3163">Former Members</span></strong></p>
 <ul>
-<li><strong>Xikun Zhang</strong> (Co-advisor), Ph.D. student, June 2020 - Summer 2024
+<li><strong>Xikun Zhang</strong> (Co-advisor), June 2020 - Summer 2024
 <ul>
+<li>Ph.D. student, University of Sydney</li>
 <li>BS from USTC and MS from University of Sydney</li>
 <li><strong>IEEE T-PAMI</strong> x 1, <strong>IEEE T-NNLS</strong> x 1, <strong>NeurIPS</strong> x 1, <strong>KDD</strong> x 1, <strong>ICDM</strong> x 1</li>
 <li>Tutorials at <strong>AAAI</strong> 2024, <strong>IJCAI</strong> 2024, <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
-<li>Employment: Nanyang Technological University, Presidential Postdoc</li>
+<li>Employment: Nanyang Technological University, Presidential Postdoctoral Fellowship</li>
 </ul>
 </li>
-<li><strong>Chang Li</strong>, 2018 - 2021, Co-advisor
+<li><strong>Chang Li</strong> (Co-advisor), 2018 - 2021, Co-advisor
 <ul>
 <li>Ph.D. Student, University of Sydney</li>
 <li><strong>KDD</strong> x 1, <strong>ICLR</strong> x 1</li>
@@ -752,12 +758,14 @@
 <li><strong>Wei Zhu</strong>, May 2020 - Aug 2020, Intern at NEC Labs America
 <ul>
 <li>Ph.D student, University of Rochester</li>
+<li>Employment: Amazon, Applied Scientist</li>
 </ul>
 </li>
 <li><strong>Dixian Zhu</strong>, May 2019 - Aug 2019, Intern at NEC Labs America
 <ul>
 <li>Ph.D Student, University of Iowa</li>
 <li><strong>AAAI</strong> x 1</li>
+<li>Employment: Stanford, Postdoc</li>
 </ul>
 </li>
 <li>
