--- a/public/services/index.html
+++ b/public/services/index.html
@@ -738,8 +738,18 @@
 <li>WSDM 2022 Workshop: Federated Learning for Private Web Search and Data Mining (FL4P-WSDM) 
 <a href="https://fl4p-wsdm.github.io/" target="_blank" rel="noopener">Link</a></li>
 </ul>
+<h4 id="area-chairssenior-program-committee-members">Area Chairs/Senior Program Committee Members</h4>
+<ul>
+<li>International Joint Conference on Artificial Intelligence (IJCAI) 2025 (Area Chair)</li>
+<li>IEEE International Conference on Data Mining (ICDM) (Area Chair)</li>
+<li>AAAI Conference on Artificial Intelligence (AAAI) 2019, 2021 - 2025 (SPC)</li>
+<li>International Joint Conference on Artificial Intelligence (IJCAI) 2021, 2023-2024 (SPC)</li>
+<li>ACM International Conference on Information and Knowledge Management (CIKM) 2019 (Applied Research Track) (SPC)</li>
+</ul>
 <h4 id="session-chairs">Session Chairs</h4>
 <ul>
+<li>IEEE Big Data 2024: Foundation Models for Big Data</li>
+<li>IEEE Big Data 2024: Deep Learning I</li>
 <li>IJCAI 2024: Anomaly/Outlier Detection</li>
 <li>SDM 2024: Reinforcement Learning and Representation Learning</li>
 <li>KDD 2023: Causal Structure Learning</li>
@@ -753,14 +763,6 @@
 <li>ICDM 2020: E-Learning and E-Commerce</li>
 <li>AAAI 2019: Transfer/Adaptation/Multitask Learning</li>
 <li>AAAI 2019: Vision and Video Analysis</li>
-</ul>
-<h4 id="area-chairssenior-program-committee-members">Area Chairs/Senior Program Committee Members</h4>
-<ul>
-<li>International Joint Conference on Artificial Intelligence (IJCAI) 2025 (Area Chair)</li>
-<li>IEEE International Conference on Data Mining (ICDM) (Area Chair)</li>
-<li>AAAI Conference on Artificial Intelligence (AAAI) 2019, 2021 - 2025 (SPC)</li>
-<li>International Joint Conference on Artificial Intelligence (IJCAI) 2021, 2023-2024 (SPC)</li>
-<li>ACM International Conference on Information and Knowledge Management (CIKM) 2019 (Applied Research Track) (SPC)</li>
 </ul>
 <h4 id="program-committee-members">Program Committee Members</h4>
 <ul>
