--- a/public/services/index.html
+++ b/public/services/index.html
@@ -671,7 +671,7 @@
   <div class="article-style"><h2 id="services">Services</h2>
 <h3 id="panelist">Panelist</h3>
 <ul>
-<li>NSF 2023, 2024</li>
+<li>NSF 2023, 2024, 2025</li>
 <li>DOE 2024</li>
 </ul>
 <h3 id="editorial-board---journals">Editorial Board - Journals</h3>
@@ -740,8 +740,9 @@
 </ul>
 <h4 id="area-chairssenior-program-committee-members">Area Chairs/Senior Program Committee Members</h4>
 <ul>
+<li>The 39th Annual Conference on Neural Information Processing Systems (NeurIPS) 2025 (Area Chair)</li>
 <li>International Joint Conference on Artificial Intelligence (IJCAI) 2025 (Area Chair)</li>
-<li>IEEE International Conference on Data Mining (ICDM) (Area Chair)</li>
+<li>IEEE International Conference on Data Mining (ICDM) 2024 (Area Chair)</li>
 <li>AAAI Conference on Artificial Intelligence (AAAI) 2019, 2021 - 2025 (SPC)</li>
 <li>International Joint Conference on Artificial Intelligence (IJCAI) 2021, 2023-2024 (SPC)</li>
 <li>ACM International Conference on Information and Knowledge Management (CIKM) 2019 (Applied Research Track) (SPC)</li>
