--- a/public/team/index.html
+++ b/public/team/index.html
@@ -675,6 +675,16 @@
 </ul>
 <p><strong><span style="color:#DE3163">Graduate Students</span></strong></p>
 <ul>
+<li><strong>Jinyu Hong</strong>, Ph.D. student, Fall 2025 -
+<ul>
+<li>BE from UESTC and MS from UESTC</li>
+</ul>
+</li>
+<li><strong>Guiquan Sun</strong>, Ph.D. student, Fall 2025 -
+<ul>
+<li>BS from South China Agricultural University</li>
+</ul>
+</li>
 <li><strong>Kanghui Ning</strong>, Ph.D. student, Fall 2024 -
 <ul>
 <li>BE from UESTC and MS from Huazhong University of Science and Technology (HUST)</li>
@@ -691,6 +701,7 @@
 <ul>
 <li>BS and MS from University of Virginia (UVA)</li>
 <li><strong>ICML</strong> x 1, <strong>IJCAI</strong> x 1</li>
+<li><strong>Eversource Fellowship</strong> 2025</li>
 <li><strong>UConn CSE Predoctoral Fellowship</strong> 2024</li>
 <li><strong>GE Fellowship</strong> for Excellence 2023</li>
 <li><strong>UConn CSE Predoctoral Fellowship</strong> (Honorable Mention), 2023</li>
@@ -702,32 +713,32 @@
 <ul>
 <li>BS from CAUC and MS from Embry-Riddle Aeronautical University (ERAU)</li>
 <li><strong>KDD</strong> x 1, <strong>IJCAI</strong> x 1, <strong>CISS</strong> x 1</li>
-<li>Tutorials at <strong>KDD</strong> 2024, <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
+<li>Tutorials at <strong>AAAI</strong> 2025, <strong>KDD</strong> 2024, <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
+<li><strong>Impactfulness of Research award in RiSC 3.0</strong> from NEC Labs America 2025</li>
 <li><strong>UConn CSE Anthony W. DeSio Endowed Fellowship</strong> 2024</li>
 <li><strong>GE Fellowship</strong> for Excellence 2023</li>
 <li><strong>UConn CSE Predoctoral Fellowship</strong> (Outstanding Scholarly and Research Accomplishments), 2023</li>
 <li><strong>GE Fellowship</strong> for Next Gen Scholar, 2022</li>
 </ul>
 </li>
-<li><strong>Qianying Ren</strong>, Ph.D. student, Fall 2021 -
-<ul>
-<li>BS from Huazhong Agricultural University</li>
-<li><strong>ICDM</strong> x 1,</li>
-<li><strong>UConn CSE Predoctoral Honorable Mention</strong>, 2024</li>
-<li><strong>GE Fellowship</strong> for Excellence, 2023</li>
-<li><strong>GE Fellowship</strong>, 2022</li>
-<li><strong>Cigna Fellowship</strong>, 2021</li>
 </ul>
-</li>
+<!--* **Qianying Ren**, Ph.D. student, Fall 2021 -
+  * BS from Huazhong Agricultural University
+  * **ICDM** x 1,
+  * **UConn CSE Predoctoral Honorable Mention**, 2024
+  * **GE Fellowship** for Excellence, 2023
+  * **GE Fellowship**, 2022
+  * **Cigna Fellowship**, 2021-->
+<ul>
 <li><strong>Yamila Garcia</strong>, Master student, Spring 2024 -</li>
 <li><strong>Xinhao Wang</strong>, Master student, Spring 2024 -</li>
 <li><strong>Nikolas Anagnostou</strong>, Master student, Fall 2024 -</li>
 </ul>
 <p><strong><span style="color:#DE3163">Undergraduate Students</span></strong></p>
 <ul>
-<li><strong>Anshul Rastogi</strong>, Fall 2023 -</li>
-<li><strong>Brendan Barnett</strong>, Fall 2023 -</li>
-<li><strong>Ryan Lagasse</strong>, Fall 2023 -</li>
+<li><strong>Anshul Rastogi</strong>, Summer 2024 -</li>
+<li><strong>Brendan Barnett</strong>, Fall 2024 -</li>
+<li><strong>Ryan Lagasse</strong>, Fall 2024 -</li>
 </ul>
 <p><strong><span style="color:#DE3163">High School Students</span></strong></p>
 <ul>
@@ -743,8 +754,8 @@
 <ul>
 <li>Ph.D. student, University of Sydney</li>
 <li>BS from USTC and MS from University of Sydney</li>
-<li><strong>IEEE T-PAMI</strong> x 1, <strong>IEEE T-NNLS</strong> x 1, <strong>NeurIPS</strong> x 1, <strong>KDD</strong> x 1, <strong>ICDM</strong> x 1</li>
-<li>Tutorials at <strong>AAAI</strong> 2024, <strong>IJCAI</strong> 2024, <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
+<li><strong>IEEE T-PAMI</strong> x 1, <strong>IEEE T-NNLS</strong> x 1, <strong>NeurIPS</strong> x 1, <strong>ICLR</strong> x 1, <strong>KDD</strong> x 1, <strong>ICDM</strong> x 1</li>
+<li>Tutorials at <strong>AAAI</strong> 2025, <strong>AAAI</strong> 2024, <strong>IJCAI</strong> 2024, <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
 <li>Employment: Nanyang Technological University, Presidential Postdoctoral Fellowship</li>
 </ul>
 </li>
