--- a/public/team/index.html
+++ b/public/team/index.html
@@ -685,7 +685,8 @@
 <li>BS from South China Agricultural University</li>
 </ul>
 </li>
-<li><strong>Kanghui Ning</strong>, Ph.D. student, Fall 2024 -
+<li>
+<a href="https://kanghui-learning.github.io/" target="_blank" rel="noopener"><strong>Kanghui Ning</strong></a>, Ph.D. student, Fall 2024 -
 <ul>
 <li>BE from UESTC and MS from Huazhong University of Science and Technology (HUST)</li>
 <li><strong>UConn CSE Graduate Fellowship</strong>, 2024</li>
@@ -697,7 +698,8 @@
 <li><strong>Eversource Fellowship</strong> 2024</li>
 </ul>
 </li>
-<li><strong>Zijie Pan</strong>, Ph.D. student, Fall 2022 -
+<li>
+<a href="https://scholar.google.com/citations?user=-ZPcD5MAAAAJ&amp;hl=en" target="_blank" rel="noopener"><strong>Zijie Pan</strong></a>, Ph.D. student, Fall 2022 -
 <ul>
 <li>BS and MS from University of Virginia (UVA)</li>
 <li><strong>ICML</strong> x 1, <strong>IJCAI</strong> x 1</li>
