--- a/public/services/index.html
+++ b/public/services/index.html
@@ -672,7 +672,7 @@
 <h3 id="panelist">Panelist</h3>
 <ul>
 <li>NSF 2023, 2024, 2025</li>
-<li>DOE 2024</li>
+<li>DOE 2024, 2025</li>
 </ul>
 <h3 id="editorial-board---journals">Editorial Board - Journals</h3>
 <ul>
@@ -715,6 +715,10 @@
 <li>Social Media Co-Chair, ICDM 2025</li>
 <li>LLM Track Co-Chair, PAKDD 2025</li>
 <li>Registration Co-Chair, IEEE Big Data 2024</li>
+<li>IJCAI 2025 Workshop: AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
+<a href="https://ai4ts.github.io/ijcai2025" target="_blank" rel="noopener">Link</a></li>
+<li>KDD 2025 Workshop: 10th International Workshop on Mining and Learning from Time Series 
+<a href="https://kdd-milets.github.io/milets2025/" target="_blank" rel="noopener">Link</a></li>
 <li>AAAI 2025 Workshop: AI for Time Series Analysis: Theory, Algorithms, and Applications (AI4TS) 
 <a href="https://ai4ts.github.io/aaai2025" target="_blank" rel="noopener">Link</a></li>
 <li>KDD 2024 Workshop: 10th International Workshop on Mining and Learning from Time Series 
@@ -740,15 +744,19 @@
 </ul>
 <h4 id="area-chairssenior-program-committee-members">Area Chairs/Senior Program Committee Members</h4>
 <ul>
+<li>International Conference on Machine Learning (ICML) 2026 (Area Chair)</li>
+<li>International Conference on Learning Representations (ICLR) 2026 (Area Chair)</li>
 <li>The 39th Annual Conference on Neural Information Processing Systems (NeurIPS) 2025 (Area Chair)</li>
 <li>International Joint Conference on Artificial Intelligence (IJCAI) 2025 (Area Chair)</li>
-<li>IEEE International Conference on Data Mining (ICDM) 2024 (Area Chair)</li>
+<li>IEEE International Conference on Data Mining (ICDM) 2024, 2025 (Area Chair)</li>
 <li>AAAI Conference on Artificial Intelligence (AAAI) 2019, 2021 - 2025 (SPC)</li>
 <li>International Joint Conference on Artificial Intelligence (IJCAI) 2021, 2023-2024 (SPC)</li>
 <li>ACM International Conference on Information and Knowledge Management (CIKM) 2019 (Applied Research Track) (SPC)</li>
 </ul>
 <h4 id="session-chairs">Session Chairs</h4>
 <ul>
+<li>ICDM 2025: Time Series II</li>
+<li>IJCAI 2025: AI for Social Good</li>
 <li>IEEE Big Data 2024: Foundation Models for Big Data</li>
 <li>IEEE Big Data 2024: Deep Learning I</li>
 <li>IJCAI 2024: Anomaly/Outlier Detection</li>
