--- a/public/team/index.html
+++ b/public/team/index.html
@@ -675,22 +675,19 @@
 </ul>
 <p><strong><span style="color:#DE3163">Graduate Students</span></strong></p>
 <ul>
-<li>
-<p><strong>Jinyu Hong</strong>, Ph.D. student, Fall 2025 -</p>
+<li><strong>Jinyu Hong</strong>, Ph.D. student, Fall 2025 -
 <ul>
 <li>BE from UESTC and MS from UESTC</li>
 <li><strong>Eversource Fellowship</strong> 2025</li>
 </ul>
 </li>
-<li>
-<p><strong>Guiquan Sun</strong>, Ph.D. student, Fall 2025 -</p>
+<li><strong>Guiquan Sun</strong>, Ph.D. student, Fall 2025 -
 <ul>
 <li>BS from South China Agricultural University</li>
 </ul>
 </li>
 <li>
-<p>
-<a href="https://kanghui-learning.github.io/" target="_blank" rel="noopener"><strong>Kanghui Ning</strong></a>, Ph.D. student, Fall 2024 -</p>
+<a href="https://kanghui-learning.github.io/" target="_blank" rel="noopener"><strong>Kanghui Ning</strong></a>, Ph.D. student, Fall 2024 -
 <ul>
 <li>BE from UESTC and MS from Huazhong University of Science and Technology (HUST)</li>
 <li><strong>NeurIPS</strong> x 1, <strong>ICDM</strong> x 1, <strong>KDD</strong> x 1,</li>
@@ -700,8 +697,7 @@
 <li><strong>Intern at Morgan Stanley</strong>, Summer 2026</li>
 </ul>
 </li>
-<li>
-<p><strong>Xuyang Shen</strong>, Ph.D. student, Spring 2024 -</p>
+<li><strong>Xuyang Shen</strong>, Ph.D. student, Spring 2024 -
 <ul>
 <li>BE from UESTC and MS from University of California San Diego (UCSD)</li>
 <li><strong>Eversource Fellowship</strong> 2024</li>
@@ -711,8 +707,7 @@
 </ul>
 </li>
 <li>
-<p>
-<a href="https://scholar.google.com/citations?user=-ZPcD5MAAAAJ&amp;hl=en" target="_blank" rel="noopener"><strong>Zijie Pan</strong></a>, Ph.D. student, Fall 2022 -</p>
+<a href="https://scholar.google.com/citations?user=-ZPcD5MAAAAJ&amp;hl=en" target="_blank" rel="noopener"><strong>Zijie Pan</strong></a>, Ph.D. student, Fall 2022 -
 <ul>
 <li>BS and MS from University of Virginia (UVA)</li>
 <li><strong>ICML</strong> x 1, <strong>IJCAI</strong> x 1, <strong>KDD</strong> x 1,</li>
@@ -721,12 +716,11 @@
 <li><strong>UConn CSE Predoctoral Fellowship</strong> 2024</li>
 <li><strong>GE Fellowship</strong> for Excellence 2023</li>
 <li><strong>UConn CSE Predoctoral Fellowship</strong> (Honorable Mention), 2023</li>
-<li>Tutorials at <strong>WWW</strong> 2023, <strong>SDM</strong> 2023, and <strong>KDD</strong> 2025</li>
+<li>Tutorials at <strong>WWW</strong> 2023, <strong>SDM</strong> 2023, <strong>KDD</strong> 2025, and <strong>AAAI</strong> 2026</li>
 </ul>
 </li>
 <li>
-<p>
-<a href="https://sites.google.com/view/jayjiang/home" target="_blank" rel="noopener"><strong>Yushan Jiang</strong></a>, Ph.D. student, Spring 2022 -</p>
+<a href="https://sites.google.com/view/jayjiang/home" target="_blank" rel="noopener"><strong>Yushan Jiang</strong></a>, Ph.D. student, Spring 2022 -
 <ul>
 <li>BS from CAUC and MS from Embry-Riddle Aeronautical University (ERAU)</li>
 <li><strong>NeurIPS</strong> x1, <strong>KDD</strong> x 2, <strong>IJCAI</strong> x 1, <strong>CISS</strong> x 1</li>
