--- a/public/research/index.html
+++ b/public/research/index.html
@@ -706,20 +706,37 @@
 <td></td>
 </tr>
 <tr>
+<td>Co-PI</td>
+<td>NSF</td>
+<td>Collaborative Research: CNS: CORE: Small: Hierarchical Deep Reinforcement Learning for Routing in Mobile Wireless Networks</td>
+<td>2022.4 - 2026.3</td>
+<td>
+<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2154191" target="_blank" rel="noopener">Link</a></td>
+<td></td>
+</tr>
+<tr>
 <td>PI</td>
 <td>Morgan Stanley</td>
 <td>Gift Fund</td>
-<td>2025.1 - 2025.12</td>
+<td>2026.1 - 2026.12</td>
 <td></td>
 <td></td>
 </tr>
 <tr>
-<td>Co-PI</td>
-<td>NSF</td>
-<td>Collaborative Research: CNS: CORE: Small: Hierarchical Deep Reinforcement Learning for Routing in Mobile Wireless Networks</td>
-<td>2022.4 - 2025.3</td>
+<td>PI</td>
+<td>NEC Labs America</td>
+<td>Gift Fund</td>
+<td>2025.9 - 2026.3</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>PI</td>
+<td>USDA-NIFA</td>
+<td>Evaluating the Impact of Preferential Trade Agreements on Agricultural and Food Trade: New Insights from Natural Language Processing and Machine Learning</td>
+<td>2022.1-2025.12</td>
 <td>
-<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2154191" target="_blank" rel="noopener">Link</a></td>
+<a href="https://portal.nifa.usda.gov/web/crisprojectpages/1028020-evaluating-the-impact-of-preferential-trade-agreements-on-agricultural-and-food-trade-new-insights-from-natural-language-processing-and-machine-learning.html" target="_blank" rel="noopener">Link</a></td>
 <td></td>
 </tr>
 <tr>
@@ -729,15 +746,6 @@
 <td>2022.1-2026.1</td>
 <td>
 <a href="https://portal.nifa.usda.gov/web/crisprojectpages/1028264-dsfas-cin-harnessing-mobility-big-data-and-artificial-intelligence-through-a-transdisciplinary-research-network-in-food-production-processing-and-consumption-systems.html" target="_blank" rel="noopener">Link</a></td>
-<td></td>
-</tr>
-<tr>
-<td>Co-PI</td>
-<td>USDA-NIFA</td>
-<td>Evaluating the Impact of Preferential Trade Agreements on Agricultural and Food Trade: New Insights from Natural Language Processing and Machine Learning</td>
-<td>2022.1-2025.12</td>
-<td>
-<a href="https://portal.nifa.usda.gov/web/crisprojectpages/1028020-evaluating-the-impact-of-preferential-trade-agreements-on-agricultural-and-food-trade-new-insights-from-natural-language-processing-and-machine-learning.html" target="_blank" rel="noopener">Link</a></td>
 <td></td>
 </tr>
 </tbody>
@@ -754,6 +762,13 @@
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>PI</td>
+<td>Morgan Stanley</td>
+<td>Gift Fund</td>
+<td>2025.1 - 2025.12</td>
+<td></td>
+</tr>
 <tr>
 <td>PI</td>
 <td>Morgan Stanley</td>
